// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StaticField/> render() should render with label 1`] = `
<div
  class="widgetField staticWidgetField"
>
  <span
    class="widgetFieldLabel"
  >
    Label
    :
     
  </span>
  <span
    class="widgetFieldValue"
  >
    foo
  </span>
</div>
`;

exports[`<StaticField/> render() should render without label 1`] = `
<div
  class="widgetField staticWidgetField"
>
  <span
    class="widgetFieldValue"
  >
    foo
  </span>
</div>
`;
